add league finish route
